--- a/authentication/templates/register/register.html
+++ b/authentication/templates/register/register.html
@@ -11,9 +11,9 @@
 
         <link rel="shortcut icon" href="assets/images/favicon.ico">
 
-        <link href="{% static 'css/log/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
-        <link href="{% static 'css/log/icons.css' %}" rel="stylesheet" type="text/css">
-        <link href="{% static 'css/log/style.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'css/reg/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'css/reg/icons.css' %}" rel="stylesheet" type="text/css">
+        <link href="{% static 'css/reg/style.css' %}" rel="stylesheet" type="text/css">
 
     </head>
 
@@ -29,9 +29,15 @@
                     <div class="text-center m-t-20 m-b-30">
                             <a href="index.html" class="logo logo-admin"><img src="assets/images/logo-dark.png" alt="" height="34"></a>
                     </div>
-                    <h4 class="text-muted text-center m-t-0"><b>Sign In</b></h4>
+                    <h4 class="text-muted text-center m-t-0"><b>Sign Up</b></h4>
 
                     <form class="form-horizontal m-t-20" action="index.html">
+
+                        <div class="form-group">
+                            <div class="col-12">
+                                <input class="form-control" type="email" required="" placeholder="Email">
+                            </div>
+                        </div>
 
                         <div class="form-group">
                             <div class="col-12">
@@ -48,26 +54,24 @@
                         <div class="form-group">
                             <div class="col-12">
                                 <div class="checkbox checkbox-primary">
-                                    <input id="checkbox-signup" type="checkbox">
+                                    <input id="checkbox-signup" type="checkbox" checked="checked">
                                     <label for="checkbox-signup">
-                                        Remember me
+                                        I accept <a href="#">Terms and Conditions</a>
                                     </label>
                                 </div>
+
                             </div>
                         </div>
 
                         <div class="form-group text-center m-t-40">
                             <div class="col-12">
-                                <button class="btn btn-primary btn-block btn-lg waves-effect waves-light" type="submit">Log In</button>
+                                <button class="btn btn-primary btn-block btn-lg waves-effect waves-light" type="submit">Register</button>
                             </div>
                         </div>
 
-                        <div class="form-group row m-t-30 m-b-0">
-                            <div class="col-sm-7">
-                                <a href="pages-recoverpw.html" class="text-muted"><i class="fa fa-lock m-r-5"></i> Forgot your password?</a>
-                            </div>
-                            <div class="col-sm-5 text-right">
-                                <a href="{% url 'auth:register' %}" class="text-muted">Create an account</a>
+                        <div class="form-group m-t-30 m-b-0">
+                            <div class="col-sm-12 text-center">
+                                <a href="pages-login.html" class="text-muted">Already have account?</a>
                             </div>
                         </div>
                     </form>
@@ -79,19 +83,19 @@
 
 
         <!-- jQuery  -->
-        <script src="{% static 'js/log/jquery.min.js' %}"></script>
-        <script src="{% static 'js/log/bootstrap.bundle.min.js' %}"></script>
-        <script src="{% static 'js/log/modernizr.min.js' %}"></script>
-        <script src="{% static 'js/log/detect.js' %}"></script>
-        <script src="{% static 'js/log/fastclick.js' %}"></script>
-        <script src="{% static 'js/log/jquery.slimscroll.js' %}"></script>
-        <script src="{% static 'js/log/jquery.blockUI.js' %}"></script>
-        <script src="{% static 'js/log/waves.js' %}"></script>
-        <script src="{% static 'js/log/wow.min.js' %}"></script>
-        <script src="{% static 'js/log/jquery.nicescroll.js' %}"></script>
-        <script src="{% static 'js/log/jquery.scrollTo.min.js' %}"></script>
+        <script src="{% static 'js/reg/jquery.min.js' %}"></script>
+        <script src="{% static 'js/reg/bootstrap.bundle.min.js' %}"></script>
+        <script src="{% static 'js/reg/modernizr.min.js' %}"></script>
+        <script src="{% static 'js/reg/detect.js' %}"></script>
+        <script src="{% static 'js/reg/fastclick.js' %}"></script>
+        <script src="{% static 'js/reg/jquery.slimscroll.js' %}"></script>
+        <script src="{% static 'js/reg/jquery.blockUI.js' %}"></script>
+        <script src="{% static 'js/reg/waves.js' %}"></script>
+        <script src="{% static 'js/reg/wow.min.js' %}"></script>
+        <script src="{% static 'js/reg/jquery.nicescroll.js' %}"></script>
+        <script src="{% static 'js/reg/jquery.scrollTo.min.js' %}"></script>
 
-        <script src="{% static 'js/log/app.js' %}"></script>
+        <script src="{% static 'js/reg/app.js' %}"></script>
 
     </body>
 </html>
