--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -21,7 +21,7 @@
             	To Connect
             </h1>
             
-            <a href="#" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
+            <a href="{% url 'auth:login_register' %}" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="btn my-4 font-weight-bold atlas-cta cta-green">Get Started</a>
         </div>
     </div>
     <!-- three-blcok -->
